syntax = "proto3";

package echo.v1;

service EchoService {
  rpc Echo(EchoRequest) returns (EchoResponse);
  rpc EchoStream(EchoStreamRequest) returns (stream EchoStreamResponse);
}

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}

message EchoStreamRequest {
  string message = 1;
  int32 times = 2;
}

message EchoStreamResponse {
  string message = 1;
}
